crates/cypher-sema/tests/snapshots/resolved_hir__03_multi_pattern_node_rel.snap
---
source: crates/cypher-sema/tests/resolved_hir.rs
expression: "pipeline(\"MATCH (a)-[r:KNOWS]->(b) RETURN a, r, b\")"
---
Statement {
  span: 0..39
  bindings: [
    Var(0) 0: a (Node) @7..8
    Var(1) 1: r (Relationship) @11..12
    Var(2) 2: b (Node) @22..23
  ]
  clauses: [
    Match @0..24 {
      Pattern {
        part[0] [
          Node(a[bind:Var(0)←Node@7..8]) @5..9
          Rel(-> r[bind:Var(1)←Relationship@11..12]:KNOWS) @9..21
          Node(b[bind:Var(2)←Node@22..23]) @21..24
        ]
      }
    }
    Return(distinct=false) @24..39 {
      proj[0]: Var(0)[a←Node@7..8]
      proj[1]: Var(1)[r←Relationship@11..12]
      proj[2]: Var(2)[b←Node@22..23]
    }
  ]
}
