crates/cypher-sema/tests/snapshots/resolved_hir__06_where_predicate.snap
---
source: crates/cypher-sema/tests/resolved_hir.rs
expression: "pipeline(\"MATCH (n) WHERE n.age > 18 RETURN n\")"
---
Statement {
  span: 0..35
  bindings: [
    Var(0) 0: n (Node) @7..8
  ]
  clauses: [
    Match @0..26 {
      Pattern {
        part[0] [
          Node(n[bind:Var(0)←Node@7..8]) @5..9
        ]
      }
    }
    Where @9..26 {
      predicate: (Var(0)[n←Node@7..8].age > 18)
    }
    Return(distinct=false) @26..35 {
      proj[0]: Var(0)[n←Node@7..8]
    }
  ]
}
